--- a/iiti.yaml
+++ b/iiti.yaml
@@ -23,8 +23,8 @@ actions:
         }
   status:
     # TODO: This action is required.
-     - vars.status = 'offline';
-        
+     #- vars.status = 'offline';
+        [ ]
 
   logout: [ ]
 
